Provide an ability to disallow exporting directories in export_file
Summary:
We are deprecating this functionality mainly because content of a directory is not deterministic and the whole directory needs to be scanned in order to determine the content.

General recommendation is to use a `genrule` with `glob`.

Test Plan: Unit tests

Reviewed By: ttsugriy

fbshipit-source-id: bd46fa4